[REACTIVE] Added first implementation of GUI